Version 2.02.178 - 
=====================================
  Ensure cluster commands drop their device cache before locking VG.
  Do not report LV as remotely active when it's locally exclusive in cluster.
  Add deprecate messages for usage of mirrors with mirrorlog.
  Separate reporting of monitoring status and error status.
  Improve validation of created strings in vgimportclone.
  Add missing initialisation of mem pool in systemd generator.
  Do not reopen output streams for multithreaded users of liblvm.
  Use versionsort to fix archive file expiry beyond 100000 files.
  Add devices/use_aio, aio_max, aio_memory to configure AIO limits.
  Support asynchronous I/O when scanning devices.
  Detect asynchronous I/O capability in configure or accept --disable-aio.
  Add AIO_SUPPORTED_CODE_PATH to indicate whether AIO may be used.
  Configure ensures /usr/bin dir is checked for dmpd tools.
  Restore pvmove support for wide-clustered active volumes (2.02.177).
  Avoid non-exclusive activation of exclusive segment types.
  Fix trimming sibling PVs when doing a pvmove of raid subLVs.
  Preserve exclusive activation during thin snaphost merge.
  Suppress some repeated reads of the same disk data at the device layer.
  Avoid exceeding array bounds in allocation tag processing.
  Refactor metadata reading code to use callback functions.
  Move memory allocation for the key dev_reads into the device layer.

Version 2.02.177 - 18th December 2017
=====================================
  When writing text metadata content, use complete 4096 byte blocks.
  Change text format metadata alignment from 512 to 4096 bytes.
  When writing metadata, consistently skip mdas marked as failed.
  Refactor and adjust text format metadata alignment calculation.
  Fix python3 path in lvmdbusd to use value detected by configure.
  Reduce checks for active LVs in vgchange before background polling.
  Ensure _node_send_message always uses clean status of thin pool.